--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,16 @@ codes/ntuple_mumukstar_MiniAOD_Year2022_Sample3_Era1.root
 codes/AntiRadVeto_Data_2022_Era1_v1.root
 codes/ntuple_mumukstar_MiniAOD_Year2022_Sample1_Era1.root
 codes/AntiRadVeto_MC_Jpsi_2022_Era1_v2.root
+codes/ntuple_mumukstar_MiniAOD_Year2022_Sample4_Era1.root
+codes/ntuple_mumukstar_MiniAOD_Year2022_Sample2_Era1.root
+codes/AntiRadVeto_Data_2022_Era1_v0.root
+codes/ntuple_mumukstar_MiniAOD_Year2022_Sample3_Era1.root
+codes/AntiRadVeto_MC_NoRes_2022_Era1_v0.root
+codes/AntiRadVeto_MC_Jpsi_2022_Era1_v0.root
+codes/AntiRadVeto_Data_2022_Era1_v1.root
+codes/ntuple_mumukstar_MiniAOD_Year2022_Sample1_Era1.root
+codes/AntiRadVeto_MC_Jpsi_2022_Era1_v2.root
+codes/AntiRadVeto_MC_NoRes_2022_Era1_v1.root
+codes/AntiRadVeto_MC_Psi2s_2022_Era1_v0.root
+efficiencies/datasets/RecoGenLevel_Angular_Merged.root
+efficiencies/datasets/GenLevel_Angular_Merged.root
